if WITH_DEMOS
    # if BuildPexClients
    # subdir('auto_box')
    # subdir('beach_ball')
    # subdir('gpc')
    # endif

    # subdir('xcmstest')
    # subdir('xgas')
    # subdir('ico')
    # subdir('maze')
    # subdir('puzzle')
    # subdir('xeyes')
    # subdir('xev')
    # subdir('xgc')
    if get_option('x11perf')
    subdir('x11perf')
    endif
endif