if WITH_DEMOS
    # TODO: need PHIGS library
    # if BuildPexClients
    # subdir('auto_box')
    # subdir('beach_ball')
    # subdir('gpc')
    # endif

    if get_option('demos-xcmstest')
        subdir('xcmstest')
    endif
    if get_option('demos-ico')
        subdir('ico')
    endif
    if get_option('demos-maze')
        subdir('maze')
    endif
    if get_option('demos-puzzle')
        subdir('puzzle')
    endif
    if get_option('demos-xeyes')
        subdir('xeyes')
    endif
    if get_option('demos-xgamma')
        subdir('xgamma')
    endif
    if get_option('demos-xev')
        subdir('xev')
    endif
    if get_option('demos-x11perf')
        subdir('x11perf')
    endif

    subdir('xgc')
    subdir('xgas')
endif