if WITH_DEMO
    if get_option('demo-xcmstest')
        subdir('xcmstest')
    endif
    if get_option('demo-ico')
        subdir('ico')
    endif
    if get_option('demo-maze')
        subdir('maze')
    endif
    if get_option('demo-puzzle')
        subdir('puzzle')
    endif
    if get_option('demo-xeyes')
        subdir('xeyes')
    endif
    if get_option('demo-xgamma')
        subdir('xgamma')
    endif
    if get_option('demo-xev')
        subdir('xev')
    endif
    if get_option('demo-x11perf')
        subdir('x11perf')
    endif
    if get_option('demo-xgc')
        subdir('xgc')
    endif
    if get_option('demo-xgas')
        subdir('xgas')
    endif
    subdir('xgetres')
endif