inc_ext += inc_config

# xext in main
# xrender in main
# xfixes in main

subdir('include')
subdir('lib' / 'xrandr')
subdir('lib' / 'xdamage')
subdir('lib' / 'xcomposite')
subdir('lib' / 'xinerama')
subdir('lib' / 'xkbfile')
subdir('lib' / 'xss')
subdir('lib' / 'xi')
subdir('lib' / 'xres')
subdir('lib' / 'xtst')
subdir('lib' / 'xv')
subdir('lib' / 'xvmc')
subdir('lib' / 'xf86dga')
subdir('lib' / 'xf86vm')
subdir('lib' / 'dmx')