inc_lib += include_directories('.')
inc_xcb += include_directories('.')

# libraries
ver_ice          = '1.1.1'
ver_sm           = '1.2.4'
ver_x11          = '1.8.10'
ver_xau          = '1.0.11'
ver_xaw          = '1.0.16'
ver_xcursor      = '1.2.3'
ver_xcvt         = '0.1.2'
ver_xdmcp        = '1.1.5'
ver_xft          = '2.3.8'
ver_xmu          = '1.2.1'
ver_xpm          = '3.5.17'
ver_xt           = '1.3.0'
ver_xtrans       = '1.5.1'
ver_xcb          = '1.17.0'
ver_xshmfence    = '1.3.2'

# extensions
ver_dmx          = '1.1.5'
ver_xcomposite   = '0.4.6'
ver_xdamage      = '1.1.6'
ver_xext         = '1.3.6'
ver_xf86dga      = '1.1.6'
ver_xf86vm       = '1.1.5'
ver_xfixes       = '6.0.1'
ver_xi           = '1.8.2'
ver_xinerama     = '1.1.5'
ver_xkbfile      = '1.1.3'
ver_xrandr       = '1.5.4'
ver_xrender      = '0.9.11'
ver_xres         = '1.2.2'
ver_xss          = '1.2.4'
ver_xtst         = '1.2.5'
ver_xv           = '1.0.12'
ver_xvmc         = '1.0.14'

subdir('GL')
subdir('X11')
subdir('xcb')
